--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,21 +59,19 @@ dev = ["flake8", "pytest>=4.6", "pytest-cov"]
 
 [project.scripts]
 
-"ATL06_to_ATL11.py" = "ATL11.scripts.ATL06_to_ATL11.py:main" 
-"ATL11_browse_plots.py"= "ATL11.scripts.ATL11_browse_plots.py:main"
-"ATL11_test_plot.py"= "ATL11.scripts.ATL11_test_plot.py:main"
-"geoloc_biases_from_xovers.py"= "ATL11.scripts.geoloc_biases_from_xovers.py:main"
-"get_tiles_for_ATL11.py"= "ATL11.scripts.get_tiles_for_ATL11.py:main"
-"index_ATL11.py" = "ATL11.scripts.index_ATL11.py:main"
-"make_ATL06_file_indexing_discover.sh" = "ATL11.scripts.make_ATL06_file_indexing_discover.sh:main"
-"make_ATL06_tiles_adapt_wCopy.sh" = "ATL11.scripts.make_ATL06_tiles_adapt_wCopy.sh:main"
-"make_ATL06_tiles_discover.sh" = "ATL11.scripts.make_ATL06_tiles_discover.sh:main"
-"make_ATL06_tiles.sh" = "ATL11.scripts.make_ATL06_tiles.sh:main"
-"make_ATL11_queue.py" = "ATL11.scripts.make_ATL11_queue.py:main"
-"make_ATL11_queue_script_dis.py" = "ATL11.scripts.make_ATL11_queue_script_dis.py:main"
-"make_ATL11_queue_script.py" = "ATL11.scripts.make_ATL11_queue_script.py:main"
-"make_Greenland_script.py" = "ATL11.scripts.make_Greenland_script.py:main"
-"run_all_l3b_is.sh" = "ATL11.scripts.run_all_l3b_is.sh:main"
+"ATL06_to_ATL11.py" = "ATL11.scripts.ATL06_to_ATL11:main" 
+"ATL11_browse_plots.py" = "ATL11.scripts.ATL11_browse_plots:main"
+"ATL11_test_plot.py" = "ATL11.scripts.ATL11_test_plot:main"
+"geoloc_biases_from_xovers.py" = "ATL11.scripts.geoloc_biases_from_xovers:main"
+"get_tiles_for_ATL11.py" = "ATL11.scripts.get_tiles_for_ATL11:main"
+"index_ATL11.py" = "ATL11.scripts.index_ATL11:main"
+"make_ATL11_queue.py" = "ATL11.scripts.make_ATL11_queue:main"
+"make_ATL11_queue_script_dis.py" = "ATL11.scripts.make_ATL11_queue_script_dis:main"
+"make_ATL11_queue_script.py" = "ATL11.scripts.make_ATL11_queue_script:main"
+"make_Greenland_script.py" = "ATL11.scripts.make_Greenland_script:main"
+
+[tool.setuptools]
+script-files = ["scripts/make_ATL06_file_indexing_discover.sh", "scripts/make_ATL06_tiles_adapt_wCopy.sh","scripts/make_ATL06_tiles_adapt_wCopy.sh", "scripts/make_ATL06_tiles_discover.sh", "scripts/make_ATL06_tiles.sh", "scripts/run_all_l3b_is.sh"]
 
 [tool.setuptools.packages.find]
 exclude = ["test*"]
