--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ dev = ["flake8", "pytest>=4.6", "pytest-cov"]
 "make_ATL11_queue_script_dis.py" = "ATL11.scripts.make_ATL11_queue_script_dis:main"
 "make_ATL11_queue_script.py" = "ATL11.scripts.make_ATL11_queue_script:main"
 "make_Greenland_script.py" = "ATL11.scripts.make_Greenland_script:main"
-"make_ATL11xo_tiles.py" = "ATL11.scripts.make_ATL11xo_tiles.py:main"
+"make_ATL11xo_tiles.py" = "ATL11.scripts.make_ATL11xo_tiles:main"
 
 [tool.setuptools]
 script-files = ["scripts/make_ATL06_file_indexing_discover.sh", "scripts/make_ATL06_tiles_adapt_wCopy.sh","scripts/make_ATL06_tiles_adapt_wCopy.sh", "scripts/make_ATL06_tiles_discover.sh", "scripts/make_ATL06_tiles.sh", "scripts/run_all_l3b_is.sh"]
