pyproject.toml: don't specify branch of pointCollection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "shapely",
     "cartopy",
     "imageio",
-    "pointCollection @ git+ssh://git@github.com/smithb/pointCollection.git@master"
+    "pointCollection @ git+ssh://git@github.com/smithb/pointCollection.git"
 ]
 
 classifiers=[
